# webapp-template

./: jerry-manifest.yaml  start-local.sh  tailwind.config.ts  vite.config.ts
.claude/data/sessions/: 2acf038a-6915-4c2a-b570-aa026c66935e.json
sidecar/: Dockerfile  README.md  fly.toml  job_processor.py  pyproject.toml  requirements.txt  tool_api.py
src/: App.tsx  index.css
src/components/: AnalysisLoader.tsx  ContentAnalysisAnimation.tsx  Logo.tsx  MarkdownRenderer.tsx
src/components/ui/: button.tsx  input.tsx
src/hooks/: useJob.ts
src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  NotFound.tsx  Signup.tsx
workers/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
workers/api/: index.ts  jobs.ts  webhook.ts
